--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "env": "^0.0.2",
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.15.0"
